Fix deprecation regarding Locale constructor